--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile project(':library')
     //compile "com.nshmura:recyclertablayout:$VERSION_NAME"
     compile 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
